--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="box">
-                    <div id="perfilPlayer" class="perfil">?</div>
+                    <div id="perfilComputer" class="perfil">?</div>
                     <p id="playerScore" class="score">Computer: 0</p>
                 </div>
 
@@ -78,7 +78,7 @@
     </footer>
 
     <!-- js -->
-    <!-- <script src="./script.js"></script> -->
+    <script type="text/javascript" src="./script.js"></script>
 
     <!-- script bt -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
