finalice lo ultimo, solo hay un error del boton try again

--- a/index.html
+++ b/index.html
@@ -74,14 +74,18 @@
                 </svg>
             </button>
         </a>
-            
+
+        <!--ANIO  
+            <script>
+            document.write(new Date().getFullYear())
+          </script> -->
     </footer>
 
     <div class="modal" id="endgameModal">
         <p class="modal-title" id="endgameMsg"></p>
         <button class="btn btn-restart" id="restartBtn">Play again</button>
     </div>
-      <div class="overlay" id="overlay"></div>
+        <div class="overlay" id="overlay"></div>
 
 
     <!-- js -->
